--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+.Desktop { display: block; }
+.Mobile { display: none; }
+@media (min-width: 881px) {
+.Desktop {display: block;}
+.Mobile { display: none; }
+
+
 * 
 { 
     margin: 0; 
@@ -30,8 +37,6 @@ header nav{
 }
 header h1{
     font-size: 1.5rem;
-    /* margin-right: 50% ; */
-    /* margin-right: auto; */
 }
 .links a{
     text-decoration: none;
@@ -52,6 +57,7 @@ section{
     padding: 60px 90px;
     max-width: 1000px;
     margin: auto;
+    overflow: hidden;
 }
 
 
@@ -251,61 +257,13 @@ section{
     gap: 100px;
 }
 
-.skill-box{
-    margin: 0;
-    width: 110px;
-    height: 110px;
-    background-color: #5C5C5C;
-    border-radius: 10px;
-    transition: transform 0.5s ease;
-    cursor: pointer;
-
+#skills img{
+    width: 75px;
+    transition: transform 0.5s;
 }
-.skill-box:hover{
-    transform: scale(1.1);
+#skills img:hover{
+    transform: scale(1.2);
 }
-
-.box1{
-    background-color: transparent;
-    background-image: url(imgs/html\ png.png);
-    background-size: cover;
-    padding: 25px;
-}
-.box2{
-    background-color: transparent;
-    background-image: url(imgs/css\ png.png);
-    background-size: cover;
-    padding: 25px;
-}
-.box3{
-    background: transparent;
-    background-size: contain;
-    background-image: url(imgs/js\ png.png);
-    padding: 25px;
-
-}
-.box4 {
-    background: transparent;
-    background-image: url(imgs/c\ png.png) ;
-    background-size: cover;
-    padding: 25px;
-}
-.box5{
-    background-color: transparent;
-    background-image: url(imgs/py\ png.png);
-    background-size: cover;
-    padding: 25px;
-}
-
-.skill-text{
-    display: flex;
-    flex-direction: row;
-    align-self: flex-start;
-    margin-left: 180px ;
-    gap: 180px;
-
-}
-
 
 /* Projects/work Section */
 
@@ -482,4 +440,193 @@ footer{
 .facebook:hover{
     transform: scale(1.2);
     transition: transform 0.3s;
+}
+
+}
+
+
+
+@media (max-width: 880px) {
+  .Desktop { display: none; }
+  .Mobile { display: block; }
+
+  
+  
+* 
+{ 
+    margin: 0; 
+    padding: 0; 
+    box-sizing: border-box; 
+    color: white;
+}
+
+
+/* Header section */
+header{
+    background-color: #4E4E4E;
+    color: #FFFAFA;
+    padding: 20px 50px ;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: sticky;
+    top: 0;
+    width: 100%;
+    z-index: 100 ;
+
+
+}
+
+
+section{
+    padding: 60px 90px;
+    max-width: 1000px;
+    margin: auto;
+}
+
+
+
+/* Hero Section */
+#hero{
+    height: 80vh;
+    background-color: #1B1B1B;
+    display: flex;
+    max-width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+    flex-direction: column;
+    text-align: center;  
+    gap: 10px;
+}
+.hero_info{
+    display: flex;
+    flex-direction: column;
+}
+#hero h2
+{ 
+    font-size: 2.5rem; 
+    margin-bottom: 0px; 
+}
+#hero h3
+{ 
+    font-size: 2.4rem; 
+    margin-bottom: 15px; 
+}
+#hero p
+{ 
+    font-size: 1.2rem; 
+    margin-bottom: 50px; 
+}
+
+.photohero{
+    width: 65%;
+    aspect-ratio: 1/1;
+    background-color: #292929;
+    border-radius: 50%;
+    margin: 100px 0 0 0;
+    background-image: url(imgs/Me\ _herosection.png);
+    background-size: cover;
+    animation: float 5s ease-in-out infinite alternate;
+}
+
+@keyframes float {
+    0%   { transform: translateY(0); }
+    100% { transform: translateY(-40px); }
+}
+
+/* //About section */
+#about{
+    height : 999.9568px;
+    background-color: #131313;
+    width: 100vw;
+    max-width: 100%;
+    color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    gap: 50px;
+}
+#about img{
+    width: 250px;
+    border-radius: 15px;
+}
+
+
+.about-bottom{
+    display: flex;
+    flex-direction: column;
+    max-width: 600px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+.about-bottom #about1{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    margin-bottom: 15px;
+    font-size: 25px;
+    font-weight: 900;
+}
+#about1 #abouth2{
+    color : #3D5058 ;
+    font-weight: 900;
+}
+
+.about-bottom .name{
+    font-size: 30px;
+    margin-bottom: 5px;
+}
+.about-bottom .role{
+    font-size: 25px;
+    margin-bottom: 30px;
+}
+
+.about-bottom p{
+    margin-bottom: 15px;
+}
+
+.about-bottom .contact{
+    display: flex;
+    flex-direction: column;
+    gap: 0px;
+    margin: 0;
+    margin-top: 1px;
+}
+
+/* SKills section */
+#skills
+{    
+    max-width: 100%;
+    height: 74.126074498567vh;
+    background: #1B1B1B;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.skills-subhead h2
+{
+    color: white;
+    margin-bottom: 50px;
+    font-size: 2rem;
+}
+.skills-list{
+    width: 120%;
+    height: 40%;
+    background: #201F1F;
+    border-radius: 15px;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    padding: 15px;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 40px;
+}
+#skills img{
+    padding: 10px;
+    width : 100%;
+}
 }
